[metadata]
name = netatmo_auth_app
version = 0.2.1
description = a tool to log into netatmo via oauth2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkittner/netatmo-auth-app
author = Jonas Kittner
author_email = jonas.kittner@rub.de
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = netatmo_auth_app
install_requires =
    flask
    requests
python_requires = >=3.10

[options.entry_points]
console_scripts =
    netatmo-auth-app = netatmo_auth_app:app.run

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
